# UltraMusicPlayer

./: .gitignore  BATTLE_FEATURES.md  IMPLEMENTATION_STATUS.md  PROJECT_BLUEPRINT.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat
.github/workflows/: android-build.yml  build-apk.yml
UltraMusicPlayer/: BUILD_INSTRUCTIONS.md  NDK_BUILD.md  README.md  TESTING_CHECKLIST.md  TODO_LEARNING_SYSTEM.md  gradlew  keystore.properties.template  settings.gradle.kts
UltraMusicPlayer/.github/workflows/: android-build.yml
UltraMusicPlayer/app/: build.gradle.kts  proguard-rules.pro
UltraMusicPlayer/app/src/main/: AndroidManifest.xml
UltraMusicPlayer/app/src/main/cpp/: CMakeLists.txt  battle_audio_engine.cpp  battle_audio_engine.h  battle_bass_boost.cpp  battle_compressor.cpp  battle_limiter.cpp  jni_bridge.cpp
UltraMusicPlayer/app/src/main/cpp/rubberband/otherbuilds/deploy/: win.bat
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/: MainActivity.kt
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/audio/: AudioBattleEngine.kt  BattleIntelligence.kt  BeatDetector.kt  ExtendedSpeedProcessor.kt  ExtremeNoiseVoiceCapture.kt  FormantPreservingProcessor.kt  GainStagingManager.kt  MusicController.kt  NativeBattleEngine.kt  SoftwareLimiter.kt  SongBattleAnalyzer.kt  SonicSpeedProcessor.kt  VenueProfiler.kt  VoiceSearchManager.kt
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/core/: BattleClipStore.kt  BattleSongDatabase.kt  BattleSongUserPrefs.kt
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/data/: FolderRepository.kt
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/di/: AppModule.kt
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/ui/: MainViewModel.kt
UltraMusicPlayer/app/src/main/java/com/ultramusic/player/ui/components/: AlbumArtView.kt  BattleControlsPanel.kt  BattleOutputModeSelectorCard.kt  CompactFolderPanel.kt  EditableValueBox.kt  EnhancedFolderBrowser.kt  MusicSpeedChangerWaveform.kt  NowPlayingBar.kt  NumericValueEditDialogs.kt  PresetPanel.kt  QueuePanel.kt  SmartPlaylistPanel.kt  SongListItem.kt  SpeedPitchControl.kt  SwipeBackContainer.kt  UnifiedControlsPanel.kt  WaveformView.kt  WaveformVisualizer.kt
UltraMusicPlayer/app/src/main/res/values/: colors.xml  strings.xml
UltraMusicPlayer/app/src/main/res/xml/: data_extraction_rules.xml
UltraMusicPlayer/app/src/test/java/com/ultramusic/player/audio/: AudioBattleEngineTest.kt
UltraMusicPlayer/app/src/test/java/com/ultramusic/player/data/: SmartSearchEngineTest.kt  SongMetadataManagerTest.kt
UltraMusicPlayer/scripts/: build.sh
app/: build.gradle.kts  build.gradle.kts.no-native  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  battle_audio_engine.cpp  battle_audio_engine.h  battle_bass_boost.cpp  jni_bridge.cpp  setup_soundtouch.sh
app/src/main/cpp/include/: AudioBuffer.h  AudioEngine.h  FFTProcessor.h  FormantPreserver.h  PhaseVocoder.h  PitchShifter.h  Resampler.h  TimeStretcher.h
app/src/main/cpp/soundtouch/: SoundTouch.cpp  SoundTouch.h
app/src/main/cpp/src/: AudioEngine.cpp  FFTProcessor.cpp  FormantPreserver.cpp  JNIBridge.cpp  PhaseVocoder.cpp  PitchShifter.cpp  Resampler.cpp  TimeStretcher.cpp
app/src/main/java/com/ultramusic/player/: MainActivity.kt  UltraMusicApp.kt
app/src/main/java/com/ultramusic/player/ai/: AIIntegrationGuide.kt  CounterSongEngine.kt  GrokAIService.kt  RAGCounterSongGuide.kt
app/src/main/java/com/ultramusic/player/audio/: ActiveBattleSystem.kt  AudioBattleEngine.kt  AudioFocusManager.kt  AudioQualityManager.kt  BattleIntelligence.kt  CrowdAnalyzer.kt  ExtremeNoiseVoiceCapture.kt  FrequencyWarfare.kt  MusicController.kt  MusicPlaybackService.kt  NativeAudioEngine.kt  NativeBattleEngine.kt  SongBattleAnalyzer.kt  VoiceSearchManager.kt  WaveformExtractor.kt
app/src/main/java/com/ultramusic/player/core/: AppErrorHandler.kt  AutoClipDetector.kt  BattleArmory.kt  LocalBattleAnalyzer.kt  ProductionBattleAI.kt  RealAudioAnalyzer.kt
app/src/main/java/com/ultramusic/player/data/: Models.kt  MusicRepository.kt  SmartPlaylistManager.kt  SmartSearchEngine.kt  SongMetadataManager.kt
app/src/main/java/com/ultramusic/player/data/model/: Models.kt
app/src/main/java/com/ultramusic/player/data/repository/: MusicScanner.kt
app/src/main/java/com/ultramusic/player/di/: AppModule.kt
app/src/main/java/com/ultramusic/player/ui/: MainViewModel.kt
app/src/main/java/com/ultramusic/player/ui/components/: BattleControlsPanel.kt  CompactFolderPanel.kt  MusicSpeedChangerWaveform.kt  NowPlayingBar.kt  PresetPanel.kt  QuickAddWidget.kt  SongListItem.kt  SpeedPitchControl.kt  UnifiedControlsPanel.kt  WaveformProgressBar.kt  WaveformView.kt  WaveformVisualizer.kt
app/src/main/java/com/ultramusic/player/ui/screens/: AISettingsScreen.kt  ActiveBattleScreen.kt  AudioBattleScreen.kt  BattleAnalyzerScreen.kt  BattleArmoryScreen.kt  BattleHQScreen.kt  BattleLibraryScreen.kt  CounterSongScreen.kt  EasyPlayerScreen.kt  EnhancementListScreen.kt  FolderBrowserScreen.kt  HomeScreen.kt  LibraryScreen.kt  MainScreen.kt  NowPlayingScreen.kt  PresetsSettingsScreens.kt  SmartPlaylistScreen.kt  VoiceSearchScreen.kt
app/src/main/java/com/ultramusic/player/ui/theme/: Theme.kt
app/src/main/java/com/ultramusic/player/utils/: VoiceSearch.kt
app/src/main/java/com/ultramusic/player/viewmodel/: PlayerViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_music_note.xml
app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
app/src/test/java/com/ultramusic/player/: TestFixtures.kt
app/src/test/java/com/ultramusic/player/audio/: AudioBattleEngineTest.kt
app/src/test/java/com/ultramusic/player/core/: AppErrorHandlerTest.kt
app/src/test/java/com/ultramusic/player/data/: SmartPlaylistManagerTest.kt  SmartSearchEngineTest.kt  SongMetadataManagerTest.kt
app/src/test/resources/: robolectric.properties
scripts/: build.bat
(+14 files in other folders)
